# crop-mpc-images

./: README.md  crop_mpc_images.py  pyproject.toml
